# furniture-matching-scrapper

./: .replit  README.md  eval_predefined_prompts.py  eval_style_genie.py  main.py  pyproject.toml  replit.md  scraper.py
attached_assets/: Pasted--2nd-hand-finder-MVP-Master-Prompt-Instructions-Act-as-Style-Genie-an--1757793394980_1757793394983.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta-name-viewport-content--1757792408086_1757792408087.txt  content-1757451492478.md
frontend/: package-lock.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
templates/: index.html
