[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi==0.115.6",
    "lxml>=6.0.1",
    "pandas==2.2.3",
    "playwright==1.49.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "uvicorn==0.32.1",
]
